<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        tools:ignore="UselessParent"
        android:background="@color/white">

        <TextView
            android:id="@+id/setting_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textStyle="bold"
            android:textSize="18sp"
            android:padding="10dp"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/setting_clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_clear"
            android:textStyle="normal"
            android:textSize="16sp"
            android:textColor="@color/grey_record"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/setting_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textStyle="normal"
            android:textSize="16sp"
            android:textColor="@color/grey_record"
            android:layout_margin="10dp"/>



    </LinearLayout>

</LinearLayout>